fix the forms to align properly with labels

--- a/resources/public/news.css
+++ b/resources/public/news.css
@@ -86,6 +86,7 @@ pre:hover {overflow:auto}
 .pagination a { margin: 10px;  text-decoration: underline; }
 .divider { border-top: 2px solid #ff6600; padding: 0px; }
 .divider a { margin: 0px;  text-decoration: underline; }
+.label { min-width: 110px; display: inline-block; }
 
 @media (max-width: 700px) {
   body, html, ol, li { padding: 0; margin: 0; width: 100%; }
